# benchmark-llm-cpu

./: .gitignore  README.md  pyproject.toml
benchmark/: __init__.py  cli.py  loaders.py  metrics.py  runner.py
benchmark/models/: __init__.py  base.py  moondream.py  paligemma2.py  qwen25_omni.py  qwen3_vl.py  registry.py
benchmark/tasks/: __init__.py  base.py  captioning.py  registry.py  structured_output.py  vqa.py
configs/: default.yaml
data/: README.md
data/structured_output/test/: dataset_info.json  state.json
data/structured_output/train/: state.json
scripts/: make_sample_manifest.py
temp_folder/vlm-fine-tuning-dataset/val/: state.json
tests/: test_models.py  test_tasks.py
